--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Explore the interactive Halloween Party project, showcasing responsive design, animations, and web development techniques. Immerse yourself in the spooky ambiance of Halloween.">
+        content="探索互動式萬聖節派對專案，展現響應式設計、動畫與網頁開發技巧，沉浸在萬聖節的神祕氛圍中。">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo.png">
 
     <!-- Page Title -->
-    <title>Parallax Scrolling Website</title>
+    <title>視差滾動網站</title>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="style.css">
@@ -19,11 +19,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Open Graph meta tags for image sharing -->
-    <meta property="og:title" content="Parallax Scroll Site">
+    <meta property="og:title" content="視差滾動網站">
     <meta property="og:description"
-        content="Explore the interactive Halloween Party project and Immerse yourself in the spooky ambiance of Halloween.">
+        content="探索互動式萬聖節派對專案，沉浸在萬聖節的神祕氛圍中。">
     <meta property="og:image" content="https://drive.google.com/uc?id=1GFbBHTi7w8weRVqLJ7bkofezEEGg4U30">
-    <meta property="og:type" content=”website” />
+    <meta property="og:type" content="website" />
     <!-- <meta property="og:url" content="https://parallax-website-by-vineet.netlify.app/"> -->
 </head>
 
@@ -32,9 +32,9 @@
     <header id="header">
         <a href="#" class="logo">Parallax</a>
         <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#sec">About</a></li>
-            <li><a href="#footer">Contact</a></li>
+            <li><a href="#" class="active">首頁</a></li>
+            <li><a href="#sec">關於</a></li>
+            <li><a href="#footer">聯絡</a></li>
         </ul>
     </header>
 
@@ -44,11 +44,11 @@
         <img src="images/land/sun.png" id="sun">
         <img src="images/land/mountains.png" id="mountains" class="wallpaper">
         <img src="images/land/cloud.png" id="cloud">
-        <h2 id="text"><span>"Embrace the Thrill of"</span><br>蔡明達</h2>
+        <h2 id="text"><span>「擁抱刺激」</span><br>蔡明達</h2>
         <img src="images/land/forest.png" id="forest">
         <img src="images/land/bird1.png" id="bird1">
         <img src="images/land/bird2.png" id="bird2">
-        <a href="#sec" id="explore">Explore</a>
+        <a href="#sec" id="explore">探索</a>
         <img src="images/land/rocks.png" id="rocks">
         <img src="images/land/splash.png" id="splash">
         <img src="images/land/water.png" id="water">
@@ -68,65 +68,48 @@
         <img src="images/sea/sea8.png" id="sea8" class="undersea">
 
         <!-- Text Content here -->
-        <h2>Parallax Scrolling Effects</h2>
-        <div id="name">By Vineet Kumar</div>
+        <h2>視差滾動效果</h2>
+        <div id="name">作者：Vineet Kumar</div>
 
         <br>
 
         <div class="glass">
-            <h3>What is parallax scrolling?</h3>
+            <h3>什麼是視差滾動？</h3>
             <p>
-                Parallax scrolling is a web design technique in which the website background moves at a slower pace than
-                the foreground. This results in a 3D effect as visitors scroll down the site, adding a sense of depth
-                and creating a more immersive browsing experience. Parallax is based on optical illusion.
-                Since the human eye perceives objects that are close to us as arger than things farther away,
-                we perceive distant objects as if they were moving more slowly. The illusion has been long adopted into
-                parallax across different mediums, fostering a realistic effect. Its first use was in traditional
-                animation,
-                dating back to as early as Disney's Snow White and the Seven Dwarfs, and in video games such as Super
-                Mario.
-                With advancements in CSS and HTML, parallax effects later evolved into the world of web design as we
-                know it today.
+                視差滾動是一種網頁設計技巧，讓網站背景的移動速度比前景慢。當訪客向下捲動時，會產生 3D 效果，
+                增加深度並打造更沉浸的瀏覽體驗。視差基於視覺錯覺：人眼會將近處物體看得比遠處更大，因此我們會
+                覺得遠處的物體移動得更慢。這種錯覺長期被運用在各種媒介中以營造真實感，最早可追溯至迪士尼《白
+                雪公主》這類傳統動畫，以及《超級瑪利歐》等早期遊戲。隨著 CSS 與 HTML 的進步，視差效果也發展成
+                今日常見的網頁設計手法。
                 <br><br>
-                One of the first implementations of parallax scrolling in the browser was created and shared in a blog
-                post by web developer Glutnix in 2007, this included example code and a demo using JavaScript and CSS 2
-                that supported Internet Explorer 6 and other browsers of that era. However, it wasn't until 2011 and the
-                introduction of HTML5 and CSS 3 coding that the technique became popular with Web designers. Advocates
-                argue it is a simple way to embrace the fluidity of the Web. Proponents use parallax backgrounds as a
-                tool to better engage users and improve the overall experience that a website provides. However, a
-                Purdue
-                University study, published in 2013, revealed the following findings: "... although parallax scrolling
-                enhanced certain aspects of the user experience, it did not necessarily improve the overall user
-                experience".
+                2007 年，網頁開發者 Glutnix 在部落格文章中分享了瀏覽器中視差滾動的早期實作，內含 JavaScript 與
+                CSS2 範例程式碼，支援當時的 Internet Explorer 6 等瀏覽器。不過直到 2011 年，隨著 HTML5 與 CSS3 的
+                普及，這項技巧才真正受到設計師青睞。支持者認為，視差是擁抱網頁流動性的簡單方式，也能透過背景的
+                深度效果吸引用戶、提升網站體驗。但 2013 年普渡大學的研究指出：雖然視差滾動能增強某些使用者體驗
+                面向，卻不一定能改善整體體驗。
             </p>
         </div>
 
         <br>
 
         <div class="glass">
-            <h3>Why should I use parallax graphics?</h3>
+            <h3>為什麼要使用視差圖形？</h3>
             <ul>
-                <p>There are two main reasons why designers should try parallax graphics:</p>
+                <p>設計師應該嘗試視差圖形的兩個主要原因：</p>
                 <li>
-                    <h4>It helps tell a story</h4>
+                    <h4>有助於講故事</h4>
                     <p>
-                        Parallax graphics are ideal for storytelling. Good design is all about communication—and when we
-                        design websites, we want to communicate with our visitors and tell a compelling story about our
-                        product, service, or brand. Parallax scrolling allows us to immerse our website visitors in
-                        unique online experiences. It's even possible to create a one-page website where visitors can
-                        read an entire story about your product or brand without navigating to multiple pages.
+                        視差圖形非常適合敘事。好的設計在於溝通，當我們打造網站時，希望與訪客對話，並講述有吸引力的
+                        產品、服務或品牌故事。視差滾動可以讓使用者沉浸在獨特的線上體驗中，甚至能在單頁網站完整呈現
+                        你的故事，而不必跳轉多個頁面。
                     </p>
                 </li>
                 <li>
-                    <h4>It helps to improve user engagement</h4>
+                    <h4>有助提升使用者參與度</h4>
                     <p>
-                        Parallax graphics can be used to improve user engagement. Reducing your website’s bounce rate is
-                        one of the goals to be conscientious of in web design. Bounce rate measures the percentage of
-                        site visitors who either hit the “back” button or close the tab after checking just one page of
-                        your
-                        website. High bounce rates hurt your search ranking, so any actions you can take to bring that
-                        rate down are worthwhile. A well-crafted parallax page gives the user the type of dynamic
-                        experience that tends to keep them on the page longer.
+                        視差圖形也能提升互動。降低網站跳出率是設計時的重要目標，跳出率衡量的是只瀏覽一頁就按返回或關閉
+                        分頁的訪客比例。過高的跳出率會影響搜尋排名，因此任何能降低跳出率的做法都值得嘗試。精心設計的視
+                        差頁面能帶來動態體驗，讓使用者停留更久。
                     </p>
                 </li>
             </ul>
@@ -135,31 +118,27 @@
         <br>
 
         <div class="glass">
-            <h3>If you want to add a parallax scrolling effect to your website, you should consider the following tips.
-            </h3>
+            <h3>想在網站加入視差效果時，可以參考以下建議：</h3>
             <ul>
                 <li aria-level="1">
-                    <h4>Use it selectively</h4>
+                    <h4>選擇性使用</h4>
                     <p>
-                        Parallax scrolling is much more powerful when you use it on one particular element as opposed
-                        to all pages and all the time. Use it in headers and titles, or maybe on your homepage only.
-                        You want parallax scrolling to strengthen your website's design, not distract users.
+                        將視差效果用在特定元素上，比套用在所有頁面更有力量。可以只放在頁首、標題或首頁，讓視差強化
+                        設計，而非分散注意力。
                     </p>
                 </li>
                 <li aria-level="1">
-                    <h4>Image compression</h4>
+                    <h4>圖片壓縮</h4>
                     <p>
-                        Parallax scrolling uses a variety of media files and CSS shapes to create a sense of depth.
-                        You don't want to compromise your web performance and user experience ith large image files that
-                        load too slowly.
+                        視差滾動需要多種媒體與 CSS 元素來營造深度。務必壓縮圖片，避免檔案過大拖慢載入，影響效能與
+                        使用者體驗。
                     </p>
                 </li>
                 <li aria-level="1">
-                    <h4>Play with color</h4>
+                    <h4>善用色彩</h4>
                     <p>
-                        Parallax scrolling isn't just about the images in the foreground and background,
-                        but about color, too. You might use more desaturated tones in the background and
-                        more lively colors in the foreground to create an even greater sense of depth.
+                        視差滾動不僅關於前景與背景圖像，也與色彩有關。背景可用較低飽和度的色調，前景則採用鮮明色彩，
+                        以營造更強烈的深度感。
                     </p>
                 </li>
             </ul>
@@ -186,7 +165,7 @@
 
     <!-- Code for the footer -->
     <div class="footer" id="footer">
-        Do Follow Me On:
+        追蹤我的社群：
         <div class="wrapper">
             <div class="social-media">
                 <div class="icon">
@@ -210,10 +189,10 @@
                 <div class="icon">
                     <i class="fa-solid fa-link"></i>
                 </div>
-                <span>Portfolio</span>
+                <span>作品集</span>
             </div>
         </div>
-        <span>A website created by Vineet Kumar ❤️<br>IT 4th Yr at SSN College of Engineering</span>
+        <span>本網站由 Vineet Kumar 製作 ❤️<br>SSN 工程學院資訊科技四年級</span>
     </div>
 
     <!-- The button to scroll back to top -->
